<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/kurs"
            android:id="@+id/id_kurs"
            android:icon="@drawable/text5"/>
        <item android:title="@string/princip"
            android:id="@+id/id_princip"
            android:icon="@drawable/text6"/>

    </group>
    <item android:title="@string/teory">
        <menu>
            <group android:checkableBehavior="single">
            <item android:title="@string/soft"
            android:id="@+id/id_soft"
            android:icon="@drawable/text"/>
            <item android:title="@string/Requirements"
                android:id="@+id/id_Requirements"
                android:icon="@drawable/text1"/>
            <item android:title="@string/UML"
                android:id="@+id/id_UML"
                android:icon="@drawable/text2"/>
            <item android:title="@string/Cases"
                android:id="@+id/id_Cases"
                android:icon="@drawable/text3"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/modul">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/modul1"
                    android:id="@+id/id_modul1"
                    android:icon="@drawable/text"/>
                <item android:title="@string/modul2"
                    android:id="@+id/id_modul2"
                    android:icon="@drawable/text1"/>
                <item android:title="@string/modul3"
                    android:id="@+id/id_modul3"
                    android:icon="@drawable/text2"/>
                <item android:title="@string/modul4"
                    android:id="@+id/id_modul4"
                    android:icon="@drawable/text3"/>
                <item android:title="@string/lastmodul"
                    android:id="@+id/id_lastmodul"
                    android:icon="@drawable/text4"/>
            </group>
        </menu>
    </item>



</menu>